--- a/Timeline/Base.lproj/Main.storyboard
+++ b/Timeline/Base.lproj/Main.storyboard
@@ -143,7 +143,7 @@
         <!--Profile-->
         <scene sceneID="Umo-ge-0wz">
             <objects>
-                <viewController id="PKM-0n-3ks" customClass="ProfileViewController" customModule="Timeline" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Profile" id="PKM-0n-3ks" customClass="ProfileViewController" customModule="Timeline" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="3H8-Mk-Jy5"/>
                         <viewControllerLayoutGuide type="bottom" id="rHr-vX-gPb"/>
@@ -152,39 +152,98 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="SrO-QI-cuE">
-                                <rect key="frame" x="180" y="236" width="240" height="128"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="SrO-QI-cuE">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="lVb-Aj-tdu">
-                                    <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="50" height="50"/>
+                                    <size key="itemSize" width="165" height="152"/>
+                                    <size key="headerReferenceSize" width="50" height="209"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="e79-94-h8M">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <rect key="frame" x="0.0" y="209" width="165" height="152"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="165" height="152"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uKP-nD-F6I">
+                                                    <rect key="frame" x="8" y="8" width="149" height="136"/>
+                                                </imageView>
+                                            </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                     </collectionViewCell>
                                 </cells>
-                                <collectionReusableView key="sectionFooterView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="8tt-Sn-Cuk">
-                                    <rect key="frame" x="0.0" y="50" width="240" height="50"/>
+                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="profileReusableView" id="8tt-Sn-Cuk">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="209"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="R3g-QW-a7d">
+                                            <rect key="frame" x="8" y="8" width="584" height="193"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="bio" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W3L-2G-yf9">
+                                                    <rect key="frame" x="0.0" y="0.0" width="584" height="65"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D3C-5Q-J1r">
+                                                    <rect key="frame" x="0.0" y="65" width="584" height="64"/>
+                                                    <state key="normal" title="url"/>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mo6-0S-94x">
+                                                    <rect key="frame" x="0.0" y="129" width="584" height="65"/>
+                                                    <state key="normal" title="followUser"/>
+                                                </button>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="R3g-QW-a7d" firstAttribute="trailing" secondItem="8tt-Sn-Cuk" secondAttribute="trailingMargin" id="0gF-YH-ZDO"/>
+                                        <constraint firstItem="R3g-QW-a7d" firstAttribute="leading" secondItem="8tt-Sn-Cuk" secondAttribute="leading" constant="8" id="1yL-XC-s5j"/>
+                                        <constraint firstItem="R3g-QW-a7d" firstAttribute="bottom" secondItem="8tt-Sn-Cuk" secondAttribute="bottomMargin" id="2hK-7x-tJr"/>
+                                        <constraint firstItem="R3g-QW-a7d" firstAttribute="top" secondItem="8tt-Sn-Cuk" secondAttribute="top" constant="8" id="4Ys-E5-p2j"/>
+                                        <constraint firstItem="R3g-QW-a7d" firstAttribute="leading" secondItem="8tt-Sn-Cuk" secondAttribute="leadingMargin" id="5Bt-wG-kC4"/>
+                                        <constraint firstItem="R3g-QW-a7d" firstAttribute="leading" secondItem="8tt-Sn-Cuk" secondAttribute="leadingMargin" id="5oT-yX-U7I"/>
+                                        <constraint firstItem="R3g-QW-a7d" firstAttribute="top" secondItem="8tt-Sn-Cuk" secondAttribute="topMargin" id="Dbf-jT-098"/>
+                                        <constraint firstItem="R3g-QW-a7d" firstAttribute="top" secondItem="8tt-Sn-Cuk" secondAttribute="top" constant="8" id="MxM-pt-Thx"/>
+                                        <constraint firstItem="R3g-QW-a7d" firstAttribute="bottom" secondItem="8tt-Sn-Cuk" secondAttribute="bottomMargin" id="Nkk-QY-pGq"/>
+                                        <constraint firstAttribute="trailing" secondItem="R3g-QW-a7d" secondAttribute="trailing" constant="8" id="Q5T-Vm-Yca"/>
+                                        <constraint firstItem="R3g-QW-a7d" firstAttribute="centerX" secondItem="8tt-Sn-Cuk" secondAttribute="centerX" id="X4d-vC-3W4"/>
+                                        <constraint firstItem="R3g-QW-a7d" firstAttribute="top" secondItem="8tt-Sn-Cuk" secondAttribute="topMargin" id="eh7-yp-8Z5"/>
+                                        <constraint firstItem="R3g-QW-a7d" firstAttribute="trailing" secondItem="8tt-Sn-Cuk" secondAttribute="trailingMargin" id="tuG-8e-8Fc"/>
+                                        <constraint firstAttribute="bottom" secondItem="R3g-QW-a7d" secondAttribute="bottom" constant="8" id="xvy-To-0TW"/>
+                                        <constraint firstItem="R3g-QW-a7d" firstAttribute="leading" secondItem="8tt-Sn-Cuk" secondAttribute="leading" constant="8" id="ycL-7N-6tn"/>
+                                        <constraint firstItem="R3g-QW-a7d" firstAttribute="centerY" secondItem="8tt-Sn-Cuk" secondAttribute="centerY" id="zMp-kh-jOb"/>
+                                    </constraints>
                                 </collectionReusableView>
+                                <connections>
+                                    <outlet property="dataSource" destination="PKM-0n-3ks" id="wPY-mq-3yA"/>
+                                    <outlet property="delegate" destination="PKM-0n-3ks" id="h2a-cD-5ZI"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="SrO-QI-cuE" firstAttribute="leading" secondItem="uBk-hx-TfJ" secondAttribute="leading" id="Prw-1a-77f"/>
+                            <constraint firstItem="rHr-vX-gPb" firstAttribute="top" secondItem="SrO-QI-cuE" secondAttribute="bottom" id="gTY-Bw-0Wf"/>
+                            <constraint firstItem="SrO-QI-cuE" firstAttribute="top" secondItem="uBk-hx-TfJ" secondAttribute="top" id="u2m-nb-5cH"/>
+                            <constraint firstAttribute="trailing" secondItem="SrO-QI-cuE" secondAttribute="trailing" id="zR3-E2-bYJ"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Profile" id="1ur-rD-KXH"/>
-                    <navigationItem key="navigationItem" id="HcP-26-syk"/>
+                    <navigationItem key="navigationItem" title="Title" id="mH2-e1-YIV"/>
+                    <connections>
+                        <outlet property="bioLabel" destination="W3L-2G-yf9" id="UJ7-KX-3Hg"/>
+                        <outlet property="followUserButton" destination="mo6-0S-94x" id="kyv-uK-cJY"/>
+                        <outlet property="urlButton" destination="D3C-5Q-J1r" id="IqH-N6-1hM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1qp-50-mMC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1987" y="1668"/>
+            <point key="canvasLocation" x="1963" y="1757"/>
         </scene>
         <!--Post Detail Table View Controller-->
         <scene sceneID="SzT-Nu-B37">
